# Pathothai

./: .gitignore  LICENSE  README.md  main.ipynb  requirements.txt  setup.py  test_xml_annotation.py
Annotations/: README.md
c-viewer/: CMakeLists.txt  README.md
c-viewer/src/: loader_common.c  loader_common.h  loader_dcm.c  loader_raster.c  loader_svs.c  main.c  viewer.c  viewer.h
checkpoints/: README.md
data/: README.md
large-image-viewer/: ENHANCED_FEATURES.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS.md  README.md  analyze_svs_tissue.py  build.bat  build.sh  build_spec.spec  check_dependencies.py  debug_individual_tile.py  debug_loading.py  debug_svs_tiling.py  debug_tile_loading.py  direct_svs_viewer.py  main.py  requirements.txt  run_enhanced_viewer.py  test_enhanced.py  test_enhanced_features.py  test_enhanced_viewer.py  test_imports.py  test_region_export.py  test_simple_svs.py  test_svs_support.py  test_svs_viewer.py  test_tissue_navigation.py
large-image-viewer/large-image-viewer/: README.md  build_exe.py  requirements.txt  setup.py
large-image-viewer/large-image-viewer/src/: main.py
large-image-viewer/large-image-viewer/src/core/: image_loader.py  image_processor.py  memory_manager.py
large-image-viewer/large-image-viewer/src/gui/: channel_controls.py  image_canvas.py  main_window.py
large-image-viewer/large-image-viewer/src/utils/: file_utils.py
large-image-viewer/src/: main.py
large-image-viewer/src/core/: __init__.py  enhanced_image_loader.py  image_loader.py  image_processor.py  memory_manager.py  simple_svs_loader.py
large-image-viewer/src/gui/: channel_controls.py  image_canvas.py  main_window.py  region_selector.py
logs/tensorboard/phase1_fold0/: events.out.tfevents.1758135498.Someone-Laptop.12328.0  events.out.tfevents.1758177523.Someone-Laptop.12328.1  events.out.tfevents.1758211732.Someone-Laptop.12328.2
output/: README.md
publication/: PUBLICATION.md  export_notebook.py  manifest.json
report/: README.md
scripts/: augmentations.py  config.py  conversion.py  diagnostics.py  infer.py  infer_gui.py  train.py
viewer/: README_VIEWER.md  UniversalImageViewer.py  regions.csv  requirements_viewer.txt  setup_cxfreeze.py
